--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       </div>
       <!-- Counter Item -->
       <div class="col-md-3 col-sm-6 work-counter-widget text-center">
-        <div class="counter wow fadeInDown" data-wow-delay="0.3s">
+        <div class="counter wow fadeInDown" data-wow-delay="0.9s">
           <div class="icon"><i class="icon-check"></i></div>
           <h4 style="color: #ffffff;">Linux</h4>
           <p>Good</p>
@@ -254,7 +254,7 @@
       </div>
       <!-- Counter Item -->
       <div class="col-md-3 col-sm-6 work-counter-widget text-center">
-        <div class="counter wow fadeInDown" data-wow-delay="0.6s">
+        <div class="counter wow fadeInDown" data-wow-delay="1.2s">
           <div class="icon"><i class="icon-check"></i></div>
           <h4 style="color: #ffffff;">MS SQL</h4>
           <p>Good</p>
@@ -317,7 +317,9 @@
             </div>
             <!-- Add txt for the freertos project-->
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix freertos">
+              <div class="portfolio-txt">
               <p>Ik ben FREERTOS met 10 jaar ervaring in diverse elektriciteitswerken en wil de carrièreswitch naar ICT-Electronica maken. Hiervoor ben ik een graduaat avondopleiding Internet of Things bij Thomas More gestart. In de loop van de opleiding heb ik meer en meer interesses gekregen rond IoT in Embedded systems en ben mij erin gaan verdiepen. Ik heb een positieve attitude en ben bereid en gemotiveerd om veel bij te leren. Een uitdaging is niets teveel maar eerder iets dat ik opzoek.</p>
+              </div>
             </div>
 
             <!-- energyMeter items -->
@@ -357,7 +359,9 @@
             </div>
             <!-- Add txt for the energymeter-->
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix energymeter">
+              <div class="portfolio-txt">
               <p>Ik ben ENERGIEMETER met 10 jaar ervaring in diverse elektriciteitswerken en wil de carrièreswitch naar ICT-Electronica maken. Hiervoor ben ik een graduaat avondopleiding Internet of Things bij Thomas More gestart. In de loop van de opleiding heb ik meer en meer interesses gekregen rond IoT in Embedded systems en ben mij erin gaan verdiepen. Ik heb een positieve attitude en ben bereid en gemotiveerd om veel bij te leren. Een uitdaging is niets teveel maar eerder iets dat ik opzoek.</p>
+              </div>
             </div>
 
             <!-- thermostat items -->
@@ -397,7 +401,9 @@
             </div>
             <!-- Add txt for the thermostat project-->
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix thermostat">
-              <p>Ik ben THERMOSTAAT met 10 jaar ervaring in diverse elektriciteitswerken en wil de carrièreswitch naar ICT-Electronica maken. Hiervoor ben ik een graduaat avondopleiding Internet of Things bij Thomas More gestart. In de loop van de opleiding heb ik meer en meer interesses gekregen rond IoT in Embedded systems en ben mij erin gaan verdiepen. Ik heb een positieve attitude en ben bereid en gemotiveerd om veel bij te leren. Een uitdaging is niets teveel maar eerder iets dat ik opzoek.</p>
+              <div class="portfolio-txt">
+                <p>Ik ben THERMOSTAAT met 10 jaar ervaring in diverse elektriciteitswerken en wil de carrièreswitch naar ICT-Electronica maken. Hiervoor ben ik een graduaat avondopleiding Internet of Things bij Thomas More gestart. In de loop van de opleiding heb ik meer en meer interesses gekregen rond IoT in Embedded systems en ben mij erin gaan verdiepen. Ik heb een positieve attitude en ben bereid en gemotiveerd om veel bij te leren. Een uitdaging is niets teveel maar eerder iets dat ik opzoek.</p>
+              </div>
             </div>
 
             <!-- bootloader items -->
@@ -437,7 +443,9 @@
             </div>
             <!-- Add txt for the bootloader project -->
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix bootloader">
-              <p>Ik ben BOOTLOADER met 10 jaar ervaring in diverse elektriciteitswerken en wil de carrièreswitch naar ICT-Electronica maken. Hiervoor ben ik een graduaat avondopleiding Internet of Things bij Thomas More gestart. In de loop van de opleiding heb ik meer en meer interesses gekregen rond IoT in Embedded systems en ben mij erin gaan verdiepen. Ik heb een positieve attitude en ben bereid en gemotiveerd om veel bij te leren. Een uitdaging is niets teveel maar eerder iets dat ik opzoek.</p>
+              <div class="portfolio-txt">
+                <p>Ik ben BOOTLOADER met 10 jaar ervaring in diverse elektriciteitswerken en wil de carrièreswitch naar ICT-Electronica maken. Hiervoor ben ik een graduaat avondopleiding Internet of Things bij Thomas More gestart. In de loop van de opleiding heb ik meer en meer interesses gekregen rond IoT in Embedded systems en ben mij erin gaan verdiepen. Ik heb een positieve attitude en ben bereid en gemotiveerd om veel bij te leren. Een uitdaging is niets teveel maar eerder iets dat ik opzoek.</p>
+              </div>
             </div>
             <!-- Matter items -->
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix matter">
@@ -459,7 +467,9 @@
             </div>
             <!-- Add txt for the matter project -->
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix matter">
-              <p>Ik ben MATTER met 10 jaar ervaring in diverse elektriciteitswerken en wil de carrièreswitch naar ICT-Electronica maken. Hiervoor ben ik een graduaat avondopleiding Internet of Things bij Thomas More gestart. In de loop van de opleiding heb ik meer en meer interesses gekregen rond IoT in Embedded systems en ben mij erin gaan verdiepen. Ik heb een positieve attitude en ben bereid en gemotiveerd om veel bij te leren. Een uitdaging is niets teveel maar eerder iets dat ik opzoek.</p>
+              <div class="portfolio-txt">
+                <p>Ik ben MATTER met 10 jaar ervaring in diverse elektriciteitswerken en wil de carrièreswitch naar ICT-Electronica maken. Hiervoor ben ik een graduaat avondopleiding Internet of Things bij Thomas More gestart. In de loop van de opleiding heb ik meer en meer interesses gekregen rond IoT in Embedded systems en ben mij erin gaan verdiepen. Ik heb een positieve attitude en ben bereid en gemotiveerd om veel bij te leren. Een uitdaging is niets teveel maar eerder iets dat ik opzoek.</p>
+              </div>
             </div>
           </div>
         </div>
