--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <i class="icon-layers"></i>
               </div>
               <div class="services-content">
-                <h3><a>Visualisatie</a></h3>
+                <h3><a>Embedded Linux</a></h3>
                 <p>Voor het monitoren van verschillende sensoren en data.</p>
               </div>
             </div>
@@ -200,7 +200,7 @@
                 <i class="icon-briefcase"></i>
               </div>
               <div class="services-content">
-                <h3><a>Bijscholing</a></h3>
+                <h3><a>IoT</a></h3>
                 <p>Ik verdiep mij in verschillende cursusen zodat ik altijd op de hoogte ben van de nieuwste trends.</p>
               </div>
             </div>
@@ -212,7 +212,7 @@
                 <i class="icon-bubbles"></i>
               </div>
               <div class="services-content">
-                <h3><a>Consultancy</a></h3>
+                <h3><a>Software</a></h3>
                 <p>U vraagt, wij draaien!</p>
               </div>
             </div>
