made some changes

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
     <!-- Services Section Start -->
     <section id="services" class="services section-padding">
-      <h2 class="section-title wow flipInX" data-wow-delay="0.4s">What i do</h2>
+      <h2 class="section-title wow flipInX" data-wow-delay="0.4s">What I do</h2>
       <div class="container">
         <div class="row">
           <!-- Services item -->
@@ -177,7 +177,7 @@
               </div>
               <div class="services-content">
                 <h3><a>Embedded software</a></h3>
-                <p>Ik kan werken met verschillende type microcontrollers zowel met 8-bitters als 32-bitters. Ik heb lichte ervaring met FreeRTOS.</p>
+                <p>This is what I love doing the most. I learned to work with both bare-metal and FreeRTOS.</p>
               </div>
             </div>
           </div>
@@ -189,7 +189,7 @@
               </div>
               <div class="services-content">
                 <h3><a>Embedded Linux</a></h3>
-                <p>Voor het monitoren van verschillende sensoren en data.</p>
+                <p>I have some experience with embedded Linux, but I'm eager to learn more about it.</p>
               </div>
             </div>
           </div>
@@ -201,7 +201,7 @@
               </div>
               <div class="services-content">
                 <h3><a>IoT</a></h3>
-                <p>Ik verdiep mij in verschillende cursusen zodat ik altijd op de hoogte ben van de nieuwste trends.</p>
+                <p>All of my projects have been related to IoT, and everything has been in combination with embedded software or software running in an embedded Linux environment.</p>
               </div>
             </div>
           </div>
@@ -213,7 +213,7 @@
               </div>
               <div class="services-content">
                 <h3><a>Software</a></h3>
-                <p>U vraagt, wij draaien!</p>
+                <p>Mainly experienced with Python, but I've also made a small project with Qt in C++.</p>
               </div>
             </div>
           </div>
@@ -269,7 +269,7 @@
     <section id="portfolios" class="section-padding">
       <!-- Container Starts -->
       <div class="container">        
-        <h2 class="section-title wow flipInX" data-wow-delay="0.4s">Mijn werken</h2>
+        <h2 class="section-title wow flipInX" data-wow-delay="0.4s">My projects</h2>
         <div class="row">          
           <div class="col-md-12">
             <!-- Portfolio Controller/Buttons -->
@@ -307,7 +307,7 @@
                       <a class="lightbox preview" href="assets/img/gallery/img-1.jpg">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="#">
+                      <a class="link" href="https://github.com/GysenBart/ProjectenVanHetWerkveldFreeRTOS" target="_blank">
                         <i class="icon-link"></i>
                       </a>
                     </div>
@@ -318,7 +318,7 @@
             <!-- Add txt for the freertos project-->
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix freertos">
               <div class="portfolio-txt">
-              <p>Ik ben FREERTOS met 10 jaar ervaring in diverse elektriciteitswerken en wil de carrièreswitch naar ICT-Electronica maken. Hiervoor ben ik een graduaat avondopleiding Internet of Things bij Thomas More gestart. In de loop van de opleiding heb ik meer en meer interesses gekregen rond IoT in Embedded systems en ben mij erin gaan verdiepen. Ik heb een positieve attitude en ben bereid en gemotiveerd om veel bij te leren. Een uitdaging is niets teveel maar eerder iets dat ik opzoek.</p>
+              <p>This project employs a 32-bit microcontroller with Ethernet for connectivity. It reads the status of a rotary encoder and transmits it to an OLED display. The software was developed with FreeRTOS and utilizes LwIP and MQTT for communication. External relays are controlled via GPIO and can be controlled via the Home Assistant app, enabling users to remotely control devices and create automation scenarios.</p>
               </div>
             </div>
 
@@ -332,7 +332,7 @@
                       <a class="lightbox preview" href="assets/img/gallery/img-2.png">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="#">
+                      <a class="link" href="https://github.com/GysenBart/EnergyMeterProject" target="_blank">
                         <i class="icon-link"></i>
                       </a>
                     </div>
@@ -349,7 +349,7 @@
                       <a class="lightbox preview" href="assets/img/gallery/img-6.png">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="#">
+                      <a class="link" href="https://github.com/GysenBart/EnergyMeterProject" target="_blank">
                         <i class="icon-link"></i>
                       </a>
                     </div>
@@ -360,28 +360,11 @@
             <!-- Add txt for the energymeter-->
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix energymeter">
               <div class="portfolio-txt">
-              <p>Ik ben ENERGIEMETER met 10 jaar ervaring in diverse elektriciteitswerken en wil de carrièreswitch naar ICT-Electronica maken. Hiervoor ben ik een graduaat avondopleiding Internet of Things bij Thomas More gestart. In de loop van de opleiding heb ik meer en meer interesses gekregen rond IoT in Embedded systems en ben mij erin gaan verdiepen. Ik heb een positieve attitude en ben bereid en gemotiveerd om veel bij te leren. Een uitdaging is niets teveel maar eerder iets dat ik opzoek.</p>
+              <p>This project focuses on integrating IoT, electronics, and various communication technologies to create a scalable energy monitoring solution. I chose a single board computer instead of a microcontroller for more capabilities. Software programming is done remotely and cross-platform to provide an additional challenge. The energy meter is read via Modbus and the data is sent to the cloud. For visualization, I use Home Assistant, which allows me to integrate different tools like Grafana to easily visualize the data.</p>
               </div>
             </div>
 
             <!-- thermostat items -->
-            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix thermostat">
-              <div class="portfolio-item">
-                <div class="shot-item">
-                  <img src="assets/img/gallery/img-3.png" alt=""/> 
-                  <div class="overlay">
-                    <div class="icons">
-                      <a class="lightbox preview" href="assets/img/gallery/img-3.png">
-                        <i class="icon-eye"></i>
-                      </a>
-                      <a class="link" href="#">
-                        <i class="icon-link"></i>
-                      </a>
-                    </div>
-                  </div>
-                </div>               
-              </div>
-            </div>
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix thermostat">
               <div class="portfolio-item">
                 <div class="shot-item">
@@ -391,7 +374,7 @@
                       <a class="lightbox preview" href="assets/img/gallery/img-4.png">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="#">
+                      <a class="link" href="https://github.com/GysenBart/XplainedMiniThermostatMQTT/tree/master" target="_blank">
                         <i class="icon-link"></i>
                       </a>
                     </div>
@@ -402,7 +385,7 @@
             <!-- Add txt for the thermostat project-->
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix thermostat">
               <div class="portfolio-txt">
-                <p>Ik ben THERMOSTAAT met 10 jaar ervaring in diverse elektriciteitswerken en wil de carrièreswitch naar ICT-Electronica maken. Hiervoor ben ik een graduaat avondopleiding Internet of Things bij Thomas More gestart. In de loop van de opleiding heb ik meer en meer interesses gekregen rond IoT in Embedded systems en ben mij erin gaan verdiepen. Ik heb een positieve attitude en ben bereid en gemotiveerd om veel bij te leren. Een uitdaging is niets teveel maar eerder iets dat ik opzoek.</p>
+                <p>The smart thermostat can accurately control and monitor the temperature in a room. The OLED display gives users instant feedback on both current and desired temperatures. With WiFi and MQTT functionality, the thermostat can be controlled and monitored remotely, making it ideal for today's connected environments. This is also my first project. To mimic the operation of a heater, we used resistors that heat up when activated. The temperature sensor can then detect these temperature changes and accurately measure the ambient temperature.</p>
               </div>
             </div>
 
@@ -416,7 +399,7 @@
                       <a class="lightbox preview" href="assets/img/gallery/BootloaderUART.png">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="#">
+                      <a class="link" href="https://github.com/GysenBart/STM32BootloaderProject" target="_blank">
                         <i class="icon-link"></i>
                       </a>
                     </div>
@@ -433,7 +416,7 @@
                       <a class="lightbox preview" href="assets/img/gallery/BootloaderUDP.png">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="#">
+                      <a class="link" href="https://github.com/GysenBart/STM32BootloaderProject" target="_blank">
                         <i class="icon-link"></i>
                       </a>
                     </div>
@@ -444,7 +427,7 @@
             <!-- Add txt for the bootloader project -->
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix bootloader">
               <div class="portfolio-txt">
-                <p>Ik ben BOOTLOADER met 10 jaar ervaring in diverse elektriciteitswerken en wil de carrièreswitch naar ICT-Electronica maken. Hiervoor ben ik een graduaat avondopleiding Internet of Things bij Thomas More gestart. In de loop van de opleiding heb ik meer en meer interesses gekregen rond IoT in Embedded systems en ben mij erin gaan verdiepen. Ik heb een positieve attitude en ben bereid en gemotiveerd om veel bij te leren. Een uitdaging is niets teveel maar eerder iets dat ik opzoek.</p>
+                <p>This project provides a complete firmware management solution for a STM32F429ZI microcontroller. It includes a bootloader supporting both UART and UDP communication and a simple Qt software interface. The software makes firmware management easy with options for uploading and deleting firmware and a choice between UART and UDP communication. Built-in logging functionality helps with troubleshooting. The project simplifies firmware management for this type of microcontroller, suitable for development and updates. STILL WORKING ON IT.</p>
               </div>
             </div>
             <!-- Matter items -->
@@ -457,7 +440,7 @@
                       <a class="lightbox preview" href="assets/img/gallery/matterOverview.png">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="#">
+                      <a class="link" href="https://github.com/GysenBart/ProjectThreadMatter/blob/master/Technische%20Analyse/Technical%20and%20functional%20analysis%20-%20Accelerometer%20Thread%20-%20Matter.pdf" target="_blank">
                         <i class="icon-link"></i>
                       </a>
                     </div>
@@ -468,7 +451,7 @@
             <!-- Add txt for the matter project -->
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix matter">
               <div class="portfolio-txt">
-                <p>Ik ben MATTER met 10 jaar ervaring in diverse elektriciteitswerken en wil de carrièreswitch naar ICT-Electronica maken. Hiervoor ben ik een graduaat avondopleiding Internet of Things bij Thomas More gestart. In de loop van de opleiding heb ik meer en meer interesses gekregen rond IoT in Embedded systems en ben mij erin gaan verdiepen. Ik heb een positieve attitude en ben bereid en gemotiveerd om veel bij te leren. Een uitdaging is niets teveel maar eerder iets dat ik opzoek.</p>
+                <p>This project is an interactive breakout game controlled by motion with a wireless controller using Matter over Thread. The breakout game is displayed on a TV using an SBC (Single Board Computer) that also serves as a Matter Hub. This was an internship project at Dekimo and the goal was to gain knowledge of the Matter protocol and to attract an audience at trade shows.</p>
               </div>
             </div>
           </div>
@@ -487,20 +470,27 @@
                   <ul class="timeline">
                     <li>
                       <i class="icon-graduation"></i>
-                      <h2 class="timelin-title">Opleidingen</h2>
+                      <h2 class="timelin-title">Education</h2>
                     </li>
                     <li>
                       <div class="content-text">
-                        <h3 class="line-title">Hoger onderwijs - Thomas More Kempen</h3>
+                        <h3 class="line-title">Thomas More Kempen</h3>
                         <span>2021 - 2024</span>
-                        <p class="line-text">Graduaat Internet of Things.</p>
+                        <p class="line-text">Graduate degree, Internet of Things.</p>
                       </div>
                     </li>
                     <li>
                       <div class="content-text">
-                        <h3 class="line-title">Secundair Onderwijs - Githo Nijlen</h3>
-                        <span>- 2010</span>
-                        <p class="line-text">3de graad beroeps, Elektriciteit.</p>
+                        <h3 class="line-title">Githo Nijlen</h3>
+                        <span>2008 - 2010</span>
+                        <p class="line-text">Secundary education BSO, Electricity.</p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="content-text">
+                        <h3 class="line-title">T.I.M. Maasmechelen</h3>
+                        <span>2004 - 2007</span>
+                        <p class="line-text">Secundary education BSO, Electricity.</p>
                       </div>
                     </li>
                   </ul>
@@ -511,7 +501,7 @@
                   <ul class="timeline">
                     <li>
                       <i class="icon-briefcase"></i>
-                      <h2 class="timelin-title">Ervaring</h2>
+                      <h2 class="timelin-title">Professional experience</h2>
                     </li>
                     <li>
                       <div class="content-text">
