--- a/index.html
+++ b/index.html
@@ -505,23 +505,58 @@
                     </li>
                     <li>
                       <div class="content-text">
-                        <h3 class="line-title">Service technieker</h3>
+                        <h3 class="line-title">Internship R&D </h3>
+                        <span>Sep 2023 - May 2024</span>
+                        <p class="line-text">Dekimo Turnhout</p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="content-text">
+                        <h3 class="line-title">Service technician</h3>
                         <span>Apr 2022 - Present</span>
                         <p class="line-text">Alertis</p>
                       </div>
                     </li>
                     <li>
                       <div class="content-text">
-                        <h3 class="line-title">Technieker</h3>
-                        <span>Okt 2021 - Apr 2022</span>
+                        <h3 class="line-title">Technician</h3>
+                        <span>Oct 2021 - Apr 2022</span>
                         <p class="line-text">Unit-T</p>
                       </div>
                     </li>
                     <li>
                       <div class="content-text">
-                        <h3 class="line-title">Technieker</h3>
-                        <span>Mrt 2021 - Okt 2021</span>
+                        <h3 class="line-title">Technician</h3>
+                        <span>Mar 2021 - Oct 2021</span>
                         <p class="line-text">Electro Zwijsen</p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="content-text">
+                      <h3 class="line-title">Technician high voltage electricity</h3>
+                      <span>May 2016 - Mar 2021</span>
+                      <p class="line-text">Telcom</p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="content-text">
+                      <h3 class="line-title">Technician electricity</h3>
+                      <span>Mov 2015 - Apr 2016</span>
+                      <p class="line-text">Goosens Electro</p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="content-text">
+                      <h3 class="line-title">Technician high voltage electricity</h3>
+                      <span>Apr 2011 - Oct 2015</span>
+                      <p class="line-text">Telcom</p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="content-text">
+                      <h3 class="line-title">Various jobs</h3>
+                      <span>Sep 2010 - Apr 2011</span>
+                      <p class="line-text">Interim</p>
                       </div>
                     </li>
                   </ul>
@@ -547,7 +582,7 @@
             </div>
             <div class="col-md-6 col-lg-6 col-sm-12">
               <div class="footer-right-area wow fadeIn">
-                <h2>Contact gegevens</h2>
+                <h2>Contact</h2>
                 <div class="footer-right-contact">
                   <div class="single-contact">
                     <div class="contact-icon">
