updated links to github

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                       <a class="lightbox preview" href="assets/img/gallery/img-1.jpg">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="https://github.com/GysenBart/ProjectenVanHetWerkveldFreeRTOS" target="_blank">
+                      <a class="link" href="https://github.com/GysenBart/ProjectenVanHetWerkveldFreeRTOS/blob/main/Verslag%20projecten%20van%20het%20werkveld.pdf" target="_blank">
                         <i class="icon-link"></i>
                       </a>
                     </div>
@@ -332,7 +332,7 @@
                       <a class="lightbox preview" href="assets/img/gallery/img-2.png">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="https://github.com/GysenBart/EnergyMeterProject" target="_blank">
+                      <a class="link" href="https://github.com/GysenBart/EnergyMeterProject/blob/main/Verslag%20energie%20meter.pdf" target="_blank">
                         <i class="icon-link"></i>
                       </a>
                     </div>
@@ -349,7 +349,7 @@
                       <a class="lightbox preview" href="assets/img/gallery/img-6.png">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="https://github.com/GysenBart/EnergyMeterProject" target="_blank">
+                      <a class="link" href="https://github.com/GysenBart/EnergyMeterProject/blob/main/Verslag%20energie%20meter.pdf" target="_blank">
                         <i class="icon-link"></i>
                       </a>
                     </div>
@@ -374,7 +374,7 @@
                       <a class="lightbox preview" href="assets/img/gallery/img-4.png">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="https://github.com/GysenBart/XplainedMiniThermostatMQTT/tree/master" target="_blank">
+                      <a class="link" href="https://github.com/GysenBart/XplainedMiniThermostatMQTT/blob/master/Verslag%20projecten%20voor%20het%20werkveld%201.pdf" target="_blank">
                         <i class="icon-link"></i>
                       </a>
                     </div>
