--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div class="profile-wrapper wow fadeInRight" data-wow-delay="0.3s">
               <h3>Hi!</h3>
-              <p>After 10 years of working as an electrician in both domestic and industrial environments, I pursued my passion for technology by studying Internet of Things at Thomas More in Geel. During my studies, I focused on software development in C and Python, and worked with various technologies like microcontrollers, single-board computers, and Linux to complete several projects. I learned a lot from these experiences, which have equipped me with a solid foundation in IoT and embedded systems.</p>
+              <p>After working for 10 years as an electrician in both domestic and industrial environments, I pursued my passion for technology by studying Internet of Things at Thomas More in Geel. During my studies I focused on software development in C and Python, working with different technologies such as microcontrollers, single board computers and Linux to complete various projects. I learned a lot from these experiences, which gave me a solid foundation in IoT and embedded systems. But not only did I learn a lot technically, I also made great strides on a personal level: I learned how to plan, how to work in a structured way, how to research, how to present and communicate professionally, and how to solve problems.</p>
               <div class="about-profile">
                 <ul class="admin-profile">
                   <li><span class="pro-title"> Name </span> <span class="pro-detail">Bart Gysen</span></li>
@@ -188,7 +188,7 @@
                 <i class="icon-layers"></i>
               </div>
               <div class="services-content">
-                <h3><a>Embedded Linux</a></h3>
+                <h3><a href="">Embedded Linux</a></h3>
                 <p>I have some experience with embedded Linux, but I'm eager to learn more about it.</p>
               </div>
             </div>
