--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <i class="icon-layers"></i>
               </div>
               <div class="services-content">
-                <h3><a href="">Embedded Linux</a></h3>
+                <h3><a>Embedded Linux</a></h3>
                 <p>I have some experience with embedded Linux, but I'm eager to learn more about it.</p>
               </div>
             </div>
