--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
     <!-- Services Section Start -->
     <section id="services" class="services section-padding">
-      <h2 class="section-title wow flipInX" data-wow-delay="0.4s">What I do</h2>
+      <h2 class="section-title wow flipInX" data-wow-delay="0.4s">What I love to do</h2>
       <div class="container">
         <div class="row">
           <!-- Services item -->
@@ -232,8 +232,6 @@
         <div class="counter wow fadeInDown" data-wow-delay="0.3s">
           <div class="icon"><i class="icon-check"></i></div>
           <h4 style="color: #ffffff;">C/C++</h4>
-          <!--<div class="counterUp">1</div>-->
-          <p>Very good</p>
         </div>
       </div>
       <!-- Counter Item -->
@@ -241,7 +239,6 @@
         <div class="counter wow fadeInDown" data-wow-delay="0.6s">
           <div class="icon"><i class="icon-check"></i></div>
           <h4 style="color: #ffffff;">Python</h4>
-          <p>Very good</p>
         </div>
       </div>
       <!-- Counter Item -->
@@ -249,7 +246,6 @@
         <div class="counter wow fadeInDown" data-wow-delay="0.9s">
           <div class="icon"><i class="icon-check"></i></div>
           <h4 style="color: #ffffff;">Linux</h4>
-          <p>Good</p>
         </div>
       </div>
       <!-- Counter Item -->
@@ -257,9 +253,36 @@
         <div class="counter wow fadeInDown" data-wow-delay="1.2s">
           <div class="icon"><i class="icon-check"></i></div>
           <h4 style="color: #ffffff;">MS SQL</h4>
-          <p>Good</p>
         </div>
-      </div>      
+      </div>  
+      <!-- Counter Item -->
+      <div class="col-md-3 col-sm-6 work-counter-widget text-center">
+        <div class="counter wow fadeInDown" data-wow-delay="0.3s">
+          <div class="icon"><i class="icon-check"></i></div>
+          <h4 style="color: #ffffff;">Networking</h4>
+        </div>
+      </div>   
+      <!-- Counter Item -->
+      <div class="col-md-3 col-sm-6 work-counter-widget text-center">
+        <div class="counter wow fadeInDown" data-wow-delay="0.6s">
+          <div class="icon"><i class="icon-check"></i></div>
+          <h4 style="color: #ffffff;">HTML 5</h4>
+        </div>
+      </div>
+      <!-- Counter Item -->
+      <div class="col-md-3 col-sm-6 work-counter-widget text-center">
+        <div class="counter wow fadeInDown" data-wow-delay="0.9s">
+          <div class="icon"><i class="icon-check"></i></div>
+          <h4 style="color: #ffffff;">FreeRTOS</h4>
+        </div>
+      </div>
+      <!-- Counter Item -->
+      <div class="col-md-3 col-sm-6 work-counter-widget text-center">
+        <div class="counter wow fadeInDown" data-wow-delay="1.2s">
+          <div class="icon"><i class="icon-check"></i></div>
+          <h4 style="color: #ffffff;">MQTT</h4>
+        </div>
+      </div>  
     </div>
   </div>
 </section>
